[project]
name = "photocipher-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
photocipher = "photocipher.main:main"


# Ensure uv/setuptools finds the package under src/
[tool.setuptools.packages]
find = { where = ["src"] }