[project]
name = "photocipher-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "cryptography>=46.0.3",
    "icecream>=2.1.8",
    "platformdirs>=4.5.1",
    "pytest>=9.0.2",
]

[project.scripts]
photocipher = "photocipher.main:main"

